--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.7.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
 }
