--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "@types/node": "^22.7.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "@types/express": "^5.0.0",
+    "express": "^4.21.0"
   }
 }
